# make_voc_dataset

./: .gitignore  LICENSE  README.md  make_voc_dataset.py  pyproject.toml  setup.cfg
src/make_voc_dataset/: make_voc_dataset.py
src/make_voc_dataset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
