[metadata]
name = make_voc_dataset
version = 0.0.3
author = Razin Tailor
author_email = razintailorpy@gmail.com
description = A quick tool to make VOC style Dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Razin-Tailor/make_voc_dataset
project_urls =
    Bug Tracker = https://github.com/Razin-Tailor/make_voc_dataset/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    mmcv-full
    numpy==1.19.3
    setuptools>=42
    tqdm
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    make-voc-dataset = make_voc_dataset.make_voc_dataset:main

